# oescript_c

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  README_CentOS  README_FreeBSD  README_NetBSD  README_OpenBSD  README_OpenSolaris  README_Ubuntu  README_lua  README_osx  TODO  autogen.sh  config.h.in  configure.ac  oesroot.vpw
corelib/test/: Makefile.am  Makefile.in  sn_handler.c  sn_handler.h  test1.json  test_except.c  test_group_dispatcher.c  test_json_deserialize.c  test_json_kernel.c  test_json_serialize.c  test_kernel.c  test_libevent.c  test_nothreads_dispatcher.c  test_oec_values.c  test_oecommon.c  test_oek_msg.c  test_sighandler.c  test_store_holder.c  test_thread_dispatcher.c  test_timer_dispatcher.c
corelib/test/jcl/: Makefile.am  Makefile.in  test_batch.c  test_decoder.c  test_encoder.c  test_oejcl.c
corelib/test/jcl/nonreentrant/: Makefile.am  Makefile.in  runme.h  runme.l  runme.y
corelib/test/jcl/reentrant/: Makefile.in  runme.h  runme.l  runme.y
corelib/test/net/: Makefile.am  Makefile.in
corelib/test/net/libevent/: Makefile.am  Makefile.in  cert  pkey  test_net.c  test_net_ssl.c
corelib/test/protocol/: Makefile.am  Makefile.in  test_async_client.c
corelib/test/protocol/jcl/: Makefile.am  Makefile.in  test_jcl_server.c  test_run_jcl_server.c
corelib/test/protocol/json/: Makefile.am  Makefile.in  test_json_server.c  test_run_json_server.c
corelib/test/security/: Makefile.am  Makefile.in  test_security_api.c
corelib/test/security/pam/: Makefile.am  Makefile.in  test_pam.c  test_pam_module.c
corelib/test/store/: Makefile.am  Makefile.in
corelib/test/store/bdb/: Makefile.am  Makefile.in  test_db.c  test_db_lease.c  test_db_threads.c  test_db_tuple.c  test_db_txn.c  test_holder_marshall.c
corelib/test/store/sqlite3/: Makefile.am  Makefile.in
modules/scripting/java/javaclient/: Makefile.am  Makefile.in
modules/scripting/java/javaclient/test/: Makefile.am  Makefile.in  script_runner.in  test_json_server.java  test_lazy_connect.java  test_msgs.java
modules/scripting/java/javaclient/test/antlr/: List.g  Makefile.am  Makefile.in  script_runner.in  test_antlr.java
modules/scripting/java/javaclient/test/javacc/: Makefile.am  Makefile.in
modules/scripting/swig/: Makefile.am  Makefile.in  OeScript.i  README_swig.txt  mfilepaths.mk  swig.vpj
modules/scripting/swig/R/: Makefile.am  Makefile.in
modules/scripting/swig/R/rlib/: Makefile.am  Makefile.in  OeScript_R_wrap.c  oescriptimpl.R
modules/scripting/swig/R/rlib/test/: Makefile.am  Makefile.in  script_runner
modules/scripting/swig/R/rmod/: DESCRIPTION.in  Makefile.am  Makefile.in  README_oedev.txt  oescript.R
modules/scripting/swig/clisp/: Makefile.am  Makefile.in
modules/scripting/swig/clisp/test/: Makefile.in  script_runner  test_swig_api.lisp
modules/scripting/swig/go/: Makefile.am  Makefile.in
modules/scripting/swig/go/golib/: Makefile.am  Makefile.in  OeScript_go_wrap.c  oescriptimpl.go  oescriptimpl_gc.c
modules/scripting/swig/go/golib/test/: Makefile.am  Makefile.in  script_runner
modules/scripting/swig/go/gomod/: Makefile.am  Makefile.in
modules/scripting/swig/guile/: Makefile.am  Makefile.in  OeScript_guile_wrap.c
modules/scripting/swig/guile/test/: Makefile.am  Makefile.in  test_swig_api.scm
modules/scripting/swig/java/: Makefile.am  Makefile.in  OeScript_java_wrap.c
modules/scripting/swig/java/test/: Makefile.am  Makefile.in  script_runner.in  test_swig_api.java
modules/scripting/swig/lua/: Makefile.am  Makefile.in
modules/scripting/swig/lua/lualib/: Makefile.am  Makefile.in  OeScript_lua_wrap.c
modules/scripting/swig/lua/lualib/test/: Makefile.am  Makefile.in  cert  pkey  script_runner  test_api.lua  test_jsonkernel.lua  test_kernel.lua  test_kernel2.lua  test_net_jcl_api.lua  test_net_jcl_multiple_extents.lua  test_net_jcl_multiple_extents2.lua  test_net_jcl_rollback_api.lua  test_net_json_api.lua  test_net_json_api_ssl.lua  test_swig_api.lua
modules/scripting/swig/lua/luamod/: Makefile.am  Makefile.in
modules/scripting/swig/lua/luamod/src/: oescript.lua
modules/scripting/swig/perl/: Makefile.am  Makefile.in
modules/scripting/swig/perl/perllib/: Makefile.am  Makefile.in  OeScript_perl5_wrap.c  oescriptimpl.pm
modules/scripting/swig/perl/perlmod/: Build.PL.in  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  Makefile.am  Makefile.in  OeLinkBin.PL.in  README  ignore.txt  oescriptimpl.pod.in
modules/scripting/swig/perl/perlmod/lib/: oescript.pm.in
modules/scripting/swig/perl/perlmod/t/: 00-load.t  10-load.t  test_api.t  test_api_getmany.t  test_api_storable.t  test_net_api_oejcl.t  test_net_api_oejson.t  test_swig_api.t
modules/scripting/swig/php/: Makefile.am  Makefile.in  OeScript_php_wrap.c  oescriptimpl.php  php_oescriptimpl.h
modules/scripting/swig/php/test/: Makefile.am  Makefile.in  php.ini  script_runner  test_swig_api.php
modules/scripting/swig/python/: Makefile.am  Makefile.in
modules/scripting/swig/python/pythonlib/: Makefile.am  Makefile.in  OeScript_python_wrap.c  oescriptimpl.py
modules/scripting/swig/python/pythonlib/test/: Makefile.am  Makefile.in  script_runner  test_api.py  test_api_getmany.py  test_api_serialize.py  test_swig_api.py
modules/scripting/swig/python/pythonmod/: Makefile.am  Makefile.in  oescript.py  setup.py.in
modules/scripting/swig/ruby/: Makefile.am  Makefile.in  OeScript_ruby_wrap.c  RUBY_IDIOMATIC_API_IS_BROKEN
modules/scripting/swig/ruby/mod/lib/: oescript.rb
modules/scripting/swig/ruby/test/: Makefile.am  Makefile.in  script_runner  test_api.rb  test_swig_api.rb
modules/scripting/swig/tcl/: Makefile.am  Makefile.in  OeScript_tcl_wrap.c
modules/scripting/swig/tcl/test/: Makefile.am  Makefile.in  script_runner
products/server/go/: Makefile.am  Makefile.in
products/server/lua/: Makefile.am  Makefile.in  oeserver  oeserver.lua  oeserver.lua_example
products/server/perl/: Makefile.am  Makefile.in  oeserver.pl
products/server/python/: Makefile.am  Makefile.in  oeserver.py
products/server/tcl/: Makefile.am  Makefile.in  oeserver.tcl
(+337 files in other folders)
